{
  "version": 4,
  "terraform_version": "1.6.4",
  "serial": 126,
  "lineage": "706f811b-b20b-bf25-4c68-42d888ce56a0",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "static_ip_mgr",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.147.19.183",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2023-12-10T04:24:09.280-08:00",
            "id": "projects/ceph-407416/regions/europe-west4/addresses/mgr-static-ip",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "mgr-static-ip",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "ceph-407416",
            "region": "europe-west4",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ceph-407416/regions/europe-west4/addresses/mgr-static-ip",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/ceph-407416/zones/europe-west4-a/instances/mgr"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "static_ip_mon",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.32.219.31",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2023-12-10T04:24:10.060-08:00",
            "id": "projects/ceph-407416/regions/europe-west4/addresses/mon-static-ip",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "mon-static-ip",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "ceph-407416",
            "region": "europe-west4",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ceph-407416/regions/europe-west4/addresses/mon-static-ip",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/ceph-407416/zones/europe-west4-a/instances/mon"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "static_ip_osd1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.34.50.251",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2023-12-10T04:24:09.264-08:00",
            "id": "projects/ceph-407416/regions/europe-west4/addresses/osd1-static-ip",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "osd1-static-ip",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "ceph-407416",
            "region": "europe-west4",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ceph-407416/regions/europe-west4/addresses/osd1-static-ip",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/ceph-407416/zones/europe-west4-a/instances/osd1"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "static_ip_osd2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.141.159.191",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2023-12-10T04:24:09.298-08:00",
            "id": "projects/ceph-407416/regions/europe-west4/addresses/osd2-static-ip",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "osd2-static-ip",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "ceph-407416",
            "region": "europe-west4",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ceph-407416/regions/europe-west4/addresses/osd2-static-ip"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "static_ip_rcli",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.147.126.173",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2023-12-10T04:24:10.077-08:00",
            "id": "projects/ceph-407416/regions/europe-west4/addresses/rcli-static-ip",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "rcli-static-ip",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "ceph-407416",
            "region": "europe-west4",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ceph-407416/regions/europe-west4/addresses/rcli-static-ip",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/ceph-407416/zones/europe-west4-a/instances/rcli"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-icmp",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2023-12-10T04:25:15.546-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/ceph-407416/global/firewalls/allow-icmp",
            "log_config": [],
            "name": "allow-icmp",
            "network": "https://www.googleapis.com/compute/v1/projects/ceph-407416/global/networks/my-vpc-cluster",
            "priority": 1000,
            "project": "ceph-407416",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ceph-407416/global/firewalls/allow-icmp",
            "source_ranges": [
              "10.0.1.0/24"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc-cluster"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-12-10T04:25:15.656-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/ceph-407416/global/firewalls/allow-ssh",
            "log_config": [],
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/ceph-407416/global/networks/my-vpc-cluster",
            "priority": 1000,
            "project": "ceph-407416",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ceph-407416/global/firewalls/allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc-cluster"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ceph-internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "3300",
                  "6789",
                  "6800-7300"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-12-10T04:25:15.569-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/ceph-407416/global/firewalls/allow-ceph-internal",
            "log_config": [],
            "name": "allow-ceph-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/ceph-407416/global/networks/my-vpc-cluster",
            "priority": 1000,
            "project": "ceph-407416",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ceph-407416/global/firewalls/allow-ceph-internal",
            "source_ranges": [
              "10.0.1.0/24"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc-cluster"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "mgr",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20231101",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/ceph-407416/zones/europe-west4-a/disks/mgr"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/ceph-407416/zones/europe-west4-a/instances/mgr",
            "instance_id": "1867922971429441708",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIFn6mBJzcwZ2xgp/+o0GRu36vwniXpYEIRRSHYQJX7Ph utilizador@MSIUbuntu\n"
            },
            "metadata_fingerprint": "xdHa0vHvsL0=",
            "name": "mgr",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.147.19.183",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/ceph-407416/global/networks/my-vpc-cluster",
                "network_ip": "10.0.1.13",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/ceph-407416/regions/europe-west4/subnetworks/my-vpc-subnet",
                "subnetwork_project": "ceph-407416"
              }
            ],
            "project": "ceph-407416",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/ceph-407416/zones/europe-west4-a/instances/mgr",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "europe-west4-a"
          },
          "dependencies": [
            "google_compute_address.static_ip_mgr",
            "google_compute_network.vpc-cluster",
            "google_compute_subnetwork.vpc-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "mon",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20231101",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/ceph-407416/zones/europe-west4-a/disks/mon"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/ceph-407416/zones/europe-west4-a/instances/mon",
            "instance_id": "4034865952311480492",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIFn6mBJzcwZ2xgp/+o0GRu36vwniXpYEIRRSHYQJX7Ph utilizador@MSIUbuntu\n"
            },
            "metadata_fingerprint": "xdHa0vHvsL0=",
            "name": "mon",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.32.219.31",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/ceph-407416/global/networks/my-vpc-cluster",
                "network_ip": "10.0.1.12",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/ceph-407416/regions/europe-west4/subnetworks/my-vpc-subnet",
                "subnetwork_project": "ceph-407416"
              }
            ],
            "project": "ceph-407416",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/ceph-407416/zones/europe-west4-a/instances/mon",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "europe-west4-a"
          },
          "dependencies": [
            "google_compute_address.static_ip_mon",
            "google_compute_network.vpc-cluster",
            "google_compute_subnetwork.vpc-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "osd1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20231101",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/ceph-407416/zones/europe-west4-a/disks/osd1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/ceph-407416/zones/europe-west4-a/instances/osd1",
            "instance_id": "3724124432790720684",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIFn6mBJzcwZ2xgp/+o0GRu36vwniXpYEIRRSHYQJX7Ph utilizador@MSIUbuntu\n"
            },
            "metadata_fingerprint": "xdHa0vHvsL0=",
            "name": "osd1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.34.50.251",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/ceph-407416/global/networks/my-vpc-cluster",
                "network_ip": "10.0.1.10",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/ceph-407416/regions/europe-west4/subnetworks/my-vpc-subnet",
                "subnetwork_project": "ceph-407416"
              }
            ],
            "project": "ceph-407416",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/ceph-407416/zones/europe-west4-a/instances/osd1",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "europe-west4-a"
          },
          "dependencies": [
            "google_compute_address.static_ip_osd1",
            "google_compute_network.vpc-cluster",
            "google_compute_subnetwork.vpc-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "osd2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20231101",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/ceph-407416/zones/europe-west4-a/disks/osd2"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "AMD Rome",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/ceph-407416/zones/europe-west4-a/instances/osd2",
            "instance_id": "3488015353086970616",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIFn6mBJzcwZ2xgp/+o0GRu36vwniXpYEIRRSHYQJX7Ph utilizador@MSIUbuntu\n"
            },
            "metadata_fingerprint": "xdHa0vHvsL0=",
            "name": "osd2",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.141.159.191",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/ceph-407416/global/networks/my-vpc-cluster",
                "network_ip": "10.0.1.11",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/ceph-407416/regions/europe-west4/subnetworks/my-vpc-subnet",
                "subnetwork_project": "ceph-407416"
              }
            ],
            "project": "ceph-407416",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/ceph-407416/zones/europe-west4-a/instances/osd2",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "europe-west4-a"
          },
          "dependencies": [
            "google_compute_address.static_ip_osd2",
            "google_compute_network.vpc-cluster",
            "google_compute_subnetwork.vpc-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "rcli",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20231101",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/ceph-407416/zones/europe-west4-a/disks/rcli"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/ceph-407416/zones/europe-west4-a/instances/rcli",
            "instance_id": "2956298612295340204",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIFn6mBJzcwZ2xgp/+o0GRu36vwniXpYEIRRSHYQJX7Ph utilizador@MSIUbuntu\n"
            },
            "metadata_fingerprint": "xdHa0vHvsL0=",
            "name": "rcli",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.147.126.173",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/ceph-407416/global/networks/my-vpc-cluster",
                "network_ip": "10.0.1.14",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/ceph-407416/regions/europe-west4/subnetworks/my-vpc-subnet",
                "subnetwork_project": "ceph-407416"
              }
            ],
            "project": "ceph-407416",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/ceph-407416/zones/europe-west4-a/instances/rcli",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "europe-west4-a"
          },
          "dependencies": [
            "google_compute_address.static_ip_rcli",
            "google_compute_network.vpc-cluster",
            "google_compute_subnetwork.vpc-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc-cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/ceph-407416/global/networks/my-vpc-cluster",
            "mtu": 0,
            "name": "my-vpc-cluster",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "ceph-407416",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ceph-407416/global/networks/my-vpc-cluster"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "vpc-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-12-10T04:25:17.570-08:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/ceph-407416/regions/europe-west4/subnetworks/my-vpc-subnet",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "my-vpc-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/ceph-407416/global/networks/my-vpc-cluster",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "ceph-407416",
            "purpose": "PRIVATE",
            "region": "europe-west4",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ceph-407416/regions/europe-west4/subnetworks/my-vpc-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc-cluster"
          ]
        }
      ]
    }
  ]
}